kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: online-event-booking-sarib-aftab
  labels:
    name: online-event-booking-sarib-aftab
