kubernetes/deployment-service-mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: online-event-booking-sarib-aftab
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:6-jammy
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 27017
        resources:
          limits:
            cpu: "0.4"
            memory: "512Mi"
          requests:
            cpu: "0.2"
            memory: "256Mi"
        volumeMounts:
        - name: mongodb-data
          mountPath: /data/db
        - name: mongodb-init-script
          mountPath: /docker-entrypoint-initdb.d/
      volumes:
      - name: mongodb-data
        emptyDir: {}
      - name: mongodb-init-script
        configMap:
          name: mongodb-init-script
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: online-event-booking-sarib-aftab
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
  type: ClusterIP
